# app_Detector

./: .gitignore  README.md  appdetect  pyproject.toml  requirements.txt  test.txt
app_detector/: __init__.py  __main__.py  cli.py  compare.py  config_capture.py  filtering.py  manifest.py  models.py  overrides.py  platform_detect.py  resolve.py  restore.py
app_detector/core/: detector.py  installer.py  manifest.py
app_detector/gui/: app.py  main.py
app_detector/models/: app_entry.py  scan_level.py
app_detector/scanners/: __init__.py  base.py  linux.py  macos.py  system_packages.py  windows.py
app_detector/tests/: test_gui_restore.py  test_linux.py  test_macos.py  test_manifest.py  test_models.py  test_overrides_compare_config.py  test_resolve.py  test_restore.py  test_virtual_core.py  test_virtual_linux.py  test_virtual_macos.py  test_virtual_windows.py  test_windows.py
app_detector/util/: icons.py  log.py  paths.py
app_detector/utils/: logging.py  platform_detect.py
tasks/: todo.md
