[project]
name = "app-detector"
version = "0.2.0"
description = "Size & kind aware backup/restore tool for installed applications"
requires-python = ">=3.10"
dependencies = [
    "rich>=13.0",
    "click>=8.0",
    "InquirerPy>=0.3.4",
    "customtkinter>=5.2.0",
    "darkdetect>=0.8.0",
    "Pillow>=10.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
app_detector_cli = "app_detector.__main__:main"
app_detector = "app_detector.gui.main:run_gui"

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app_detector*"]
